fix urllib version

--- a/dbt_project/models/sources.yml
+++ b/dbt_project/models/sources.yml
@@ -1,9 +1,7 @@
-sources:
-  - name: main
-    tables:
-      - name: film
-      - name: film_category
-      - name: category
-      - name: vehicle_information
-      - name: location_information
+##Example of sources.yml
+
+# sources:
+#   - name: main
+#     tables:
+#       - name: film
 
